Ensure whitespace in tags are not automatically collapsed

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -1741,3 +1741,6 @@ div.pydocx-center{
     font-size:14px;
 }
 
+.tag {
+    white-space: pre;
+}
